@@ -30,12 +30,14 @@
 
 require './config.php';
 
-require_once 'includes/controllers/timeline_ctrl.php';
+require_once './includes/controllers/timeline_ctrl.php';
+
 $controller = new TimelineController();
 $controller->init();
 
 print_header($pgv_lang["timeline_title"]);
-require 'js/autocomplete.js.htm';
+
+if ($ENABLE_AUTOCOMPLETE) require './js/autocomplete.js.htm';
 ?>
 <script language="JavaScript" type="text/javascript">
 <!--
